Bug 1565512 - Ensure the RCD-RSF callback transform is applied for events targeting fixed content too. r=tnikkel, a=RyanVM

Differential Revision: https://phabricator.services.mozilla.com/D40535